--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,5 +1,29 @@
 {
   "Enter App Password" : "Пароль для входа",
   "Login" : "Войти",
-  "change_language": "Сменить язык"
+  "Settings" : "Настройки",
+  "Enter New Password" : "Введите пароль",
+  "Export Contacts CSV" : "Экспортировать контакты CSV",
+  "Save Password": "Сохранить пароль",
+  "Remove Password": "Удалить пароль",
+  "Set or Change Password" : "Изменить пароль",
+  "Enter New Wipe Password" : "Введите пароль сброса",
+  "Save Termination Password" : "Сохранить пароль сброса",
+  "Remove Termination Password" : "Удалить пароль сброса",
+  "Set or Change Termination Password" : "Изменить пароль сброса",
+  "Passwords": "Пароли",
+  "Contacts": "Контакты",
+  "No contacts available.": "Нет доступных контактов.",
+  "Click \"Add Contact\" to create a new one." : "Нажмите \"Добавить контакт\"",
+  "Add Contact": "Добавить контакт",
+  "Add New Contact": "Добавить новый контакт",
+  "Enter Name": "Введите имя",
+  "Enter Contact": "Введите контакт",
+  "Keep After Wipe": "Оставить после сброса",
+  "Save": "Сохранить",
+  "Cancel": "Отмена",
+  "Delete Contact": "Удалить контакт",
+  "Are you sure you want to delete": "Удаляем",
+  "Delete": "Удалить",
+  "Edit Contact": "Редактирование"
 }
